--- a/src/global.css
+++ b/src/global.css
@@ -12,13 +12,19 @@
     --gray-600: #323238;
     --gray-700: #29292e;
     --gray-800: #202024;
-    --gray-900: #121214;
-  
+    --gray-900: #121214;  
+    
     --green-500: #00875f;
   }
 
   body {
     background: var(--gray-900);
-    color: (--gray-300);
+    color: var(--gray-300);
     -webkit-font-smoothing: antialiased;
+  }
+
+  body, input, textarea, button {
+    font-family: sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
   }
