--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,7 @@
 .header {
     background-color: #333;
-    height: 80px;
+    
+    display: flex;
+    justify-content: center;
+    padding: 1.25rem;
 }
